偽物語対応

--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -56,7 +56,7 @@ datasource.h2.heartbeatsql=select 1
 datasource.h2.isolationlevel=read_committed
 
 datasource.mysql.username=root
-datasource.mysql.password=
+datasource.mysql.password=root
 datasource.mysql.databaseUrl=jdbc:mysql://127.0.0.1:3306/pachi?characterEncoding=utf8
 datasource.mysql.databaseDriver=com.mysql.jdbc.Driver
 datasource.mysql.minConnections=1
